--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
             <a class="btn" href="#">Visítanos</a>
         </div>
        
-        <video  autoplay loop muted>
+        <video  autoplay loop muted poster="images/recamara.jpg">
             <source src="images/1newroomjapanes8878545.mp4" type="video/mp4">
         </video>
     </div>
